# edsl-conjure

./: .gitignore  MIGRATION.md  README.md  pyproject.toml  setup.py  test_fluent_workflow.py  test_gss.py  test_plugin.py  test_question_editing.py  test_question_editing_extended.py
conjure/: AgentConstructionMixin.py  CLAUDE.md  Conjure.py  InputData.py  InputDataCSV.py  InputDataMixinQuestionStats.py  RawQuestion.py  __init__.py  __main__.py  agent_construction_mixin.py  army.csv  conjure.py  create_gss.py  input_data.py  input_data_csv.py  input_data_mixin_question_stats.py  input_data_py_read.py  naming_utilities.py  plugin.py  question_error_logger.py  question_option_mixin.py  raw_question.py  utilities.py
tests/: test_conjure.py
