[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conjure"
version = "0.1.0"
description = "A tool that converts survey data files into edsl objects"
readme = "README.md"
requires-python = ">=3.11"
authors = []
dependencies = [
    "edsl @ file:///Users/johnhorton/tools/ep/edsl",
    "typer",
    "rich"
]

[project.scripts]
conjure = "conjure.__main__:app"

[tool.hatch.metadata]
allow-direct-references = true
